--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chrome-extension-react-ts",
+  "name": "openai-preview-chrome-extension",
   "version": "0.0.0",
   "author": "",
   "description": "",
@@ -9,7 +9,7 @@
     "chrome-extension",
     "react",
     "vite",
-    "create-chrome-ext"
+    "openai"
   ],
   "engines": {
     "node": ">=14.18.0"
@@ -21,10 +21,7 @@
     "fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'"
   },
   "dependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-react": "^7.18.6",
     "axios": "^1.3.4",
-    "buffer": "^6.0.3",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
